Introdução a Estrutura HTML 1 - Tag <br>

--- a/iNTRODUÇÃO/index.html
+++ b/iNTRODUÇÃO/index.html
@@ -5,6 +5,6 @@
     </head>
     <body> <!-- é o elemento onde fica todo o conteúdo visível da página. -->
         <h1>Titulo 1</h1>
-        <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Ipsa, esse perferendis voluptatibus sequi distinctio sit facere obcaecati, cupiditate minima tempore quia nemo ea fuga ducimus delectus porro? Commodi, distinctio deserunt.</p>
+        <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Ipsa, esse perferendis voluptatibus sequi distinctio sit facere obcaecati, cupiditate minima tempore quia nemo ea fuga ducimus delectus porro? Commodi, distinctio deserunt. Lorem ipsum dolor sit amet consectetur adipisicing elit. <br><br> sequi sed vitae accusantium unde facere expedita quas voluptatibus at neque a omnis eum id eveniet earum, sint quam inventore perferendis. Lorem ipsum dolor sit amet consectetur adipisicing elit. Quod dolore commodi perspiciatis, amet provident autem quo minima nisi, labore sed veniam delectus odio et quis atque? <br><br>Atque officiis nulla deserunt? Lorem, ipsum dolor sit amet consectetur adipisicing elit. Vel sequi perferendis cum odio, quibusdam natus, modi recusandae molestiae eligendi voluptatum nostrum. Consequatur temporibus ab aliquid enim quo aliquam quibusdam eligendi.</p>
     </body>
 </html>
