Introdução a Estrutura HTML - Add algumas tags

--- a/iNTRODUÇÃO/index.html
+++ b/iNTRODUÇÃO/index.html
@@ -1,10 +1,39 @@
 <!DOCTYPE html> <!-- Informa que esse documento é um HTML5 -->
 <html> <!-- É o elemento raiz da página HTML -->
     <head> <!-- é o elemento que especifica as meta-informações da ppágina HTML -->
+        <html lang="pt-br">
+        <meta charset="UTF-8">
         <title>Estrutura HTML</title> <!-- é o titulo da página HTML -->
     </head>
     <body> <!-- é o elemento onde fica todo o conteúdo visível da página. -->
         <h1>Titulo 1</h1>
-        <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Ipsa, esse perferendis voluptatibus sequi distinctio sit facere obcaecati, cupiditate minima tempore quia nemo ea fuga ducimus delectus porro? Commodi, distinctio deserunt. Lorem ipsum dolor sit amet consectetur adipisicing elit. <br><br> sequi sed vitae accusantium unde facere expedita quas voluptatibus at neque a omnis eum id eveniet earum, sint quam inventore perferendis. Lorem ipsum dolor sit amet consectetur adipisicing elit. Quod dolore commodi perspiciatis, amet provident autem quo minima nisi, labore sed veniam delectus odio et quis atque? <br><br>Atque officiis nulla deserunt? Lorem, ipsum dolor sit amet consectetur adipisicing elit. Vel sequi perferendis cum odio, quibusdam natus, modi recusandae molestiae eligendi voluptatum nostrum. Consequatur temporibus ab aliquid enim quo aliquam quibusdam eligendi.</p>
+
+        <p title="esse é um paragrafo"><a href="#">Lorem</a> ipsum, dolor sit amet consectetur adipisicing elit. Ipsa, esse perferendis voluptatibus sequi distinctio sit facere obcaecati, cupiditate minima tempore quia nemo ea fuga ducimus delectus porro? Commodi, distinctio deserunt. <a href="https://pt.wikipedia.org/wiki/Lorem_ipsum">Lorem</a> ipsum dolor sit amet consectetur adipisicing elit.</p>
+
+        <img src="lorem-ipsum-logo.jpg" alt="Lorem Ipsum Logo" width="100%" >
+
+        <hr> <!--Adiciona uma linha horizontal, utilizada para separar conteúdos-->
+
+        <h2>Titulo 2</h2>
+
+        <p>sequi sed vitae accusantium unde facere expedita quas voluptatibus at neque a omnis eum id eveniet earum, sint quam inventore perferendis. <a href="https://pt.wikipedia.org/wiki/Lorem_ipsum">Lorem</a> ipsum dolor sit amet consectetur adipisicing elit. Quod dolore commodi perspiciatis, amet provident autem quo minima nisi, labore sed veniam delectus odio et quis atque? </p> 
+        <p>Atque officiis nulla deserunt? <a href="https://pt.wikipedia.org/wiki/Lorem_ipsum">Lorem</a>, ipsum dolor sit amet consectetur adipisicing elit. Vel sequi perferendis cum odio, quibusdam natus, modi recusandae molestiae eligendi voluptatum nostrum. Consequatur temporibus ab aliquid enim quo aliquam quibusdam eligendi.</p>
+
+        <hr> 
+
+        <h3>Titulo 3</h3>
+
+        <p><a href="https://pt.wikipedia.org/wiki/Lorem_ipsum">Lorem</a> ipsum dolor sit amet consectetur, adipisicing elit. Minus recusandae optio, illum quis rerum libero perferendis nobis vel, sunt, blanditiis repellat animi possimus! Vitae iure maxime cum distinctio quam saepe. </p> 
+        <p><a href="https://pt.wikipedia.org/wiki/Lorem_ipsum">Lorem</a> ipsum dolor sit amet consectetur adipisicing elit. Dolores et officiis officia blanditiis accusamus. Cum repellendus saepe voluptate quae doloremque facilis repellat repudiandae, distinctio fuga odit totam perferendis aliquam necessitatibus?</p>
+
+<pre>
+Isso aqui faz o Browser não ignorar
+as linhas e espaços que tem no Código fonte,
+ou seja, da maneira que eu escrever no 
+código fonte, será a maneira que vai aparecer
+na página web. Sim, meu português é avançado.
+</pre>
+
+        
     </body>
 </html>
