--- a/iNTRODUÇÃO/index.html
+++ b/iNTRODUÇÃO/index.html
@@ -1,14 +1,30 @@
 <!DOCTYPE html> <!-- Informa que esse documento é um HTML5 -->
-<html> <!-- É o elemento raiz da página HTML -->
+<html lang="pt-br"> <!-- É o elemento raiz da página HTML -->
     <head> <!-- é o elemento que especifica as meta-informações da ppágina HTML -->
-        <html lang="pt-br">
         <meta charset="UTF-8">
+        <meta http-equiv="X-UA-Compatible" content="IE=edge">
+        <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <title>Estrutura HTML</title> <!-- é o titulo da página HTML -->
     </head>
     <body> <!-- é o elemento onde fica todo o conteúdo visível da página. -->
+        <p>Página: <a href="index.html">1</a> <a href="page2.html">2</a> <a href="#">3</a></p>
         <h1>Titulo 1</h1>
 
         <p title="esse é um paragrafo"><a href="#">Lorem</a> ipsum, dolor sit amet consectetur adipisicing elit. Ipsa, esse perferendis voluptatibus sequi distinctio sit facere obcaecati, cupiditate minima tempore quia nemo ea fuga ducimus delectus porro? Commodi, distinctio deserunt. <a href="https://pt.wikipedia.org/wiki/Lorem_ipsum">Lorem</a> ipsum dolor sit amet consectetur adipisicing elit.</p>
+
+        <p>
+            <b>Texto em negrito</b>
+            <strong>Texto importante</strong> (Semântica)
+            <i>Texto em itálico</i> <!--representa o texto que é iniciado de uma prosa, como uma palavra estrangeira, pensamentos de um personagem ficcional, ou quando o texto se refere á definição de uma palavra em vez de representar seu significado semântico-->
+            <em>Texto Enfátizado</em> <!--representa ênfase importante de seus conteúdos-->
+            <!--O título de um trabalho, tal como o nome de um livro ou filme, deve usar <cite>-->
+            <mark>Texto Marcado</mark>
+            <small>Texto pequeno</small>
+            <del>Texto deletado</del>
+            <ins>Texto inserido</ins>    
+            <sup>Texto em cima</sup>
+            <sub>Texto em baixo</sub>
+        </p>
 
         <img src="lorem-ipsum-logo.jpg" alt="Lorem Ipsum Logo" width="100%" >
 
@@ -33,7 +49,24 @@ ou seja, da maneira que eu escrever no
 código fonte, será a maneira que vai aparecer
 na página web. Sim, meu português é avançado.
 </pre>
+        <p>Como aristóteles dizia: </p>
+        <blockquote cite="https://www.pensador.com/aristoteles_frases/">
+            "<i>O sábio nunca diz tudo o que pensa, mas pensa sempre tudo o que diz.</i>"
+        </blockquote>
+        <address>
+            Escrito por fulano de tal<br>
+            visite a gente em: casa do sao jao<br>
+            Contate-nos: email@email.com<br>
+        </address>
+        <!--Tag <abbr> mostra uma descrição para a abreviação-->
+        <p>Sim, isso é <abbr title="Hyper Text Markup Language">HTML</abbr></p> 
+        <p><cite>One Piece</cite> Escrito por Eiichiro Oda</p>
+        <bdo dir="ltr">Esse texto foi escrito da esquerda para a direita<Br></bdo>
+        <bdo dir="rtl">Esse texto foi escrito da direita para a esquerda<Br></bdo>
+        <p>Página: <a href="index.html">1</a> <a href="page2.html">2</a> <a href="#">3</a></p>
 
         
+
+
     </body>
 </html>
