Introdução ao HTML - Imagens

--- a/iNTRODUÇÃO/index.html
+++ b/iNTRODUÇÃO/index.html
@@ -8,7 +8,7 @@
     </head>
     <body> <!-- é o elemento onde fica todo o conteúdo visível da página. -->
         <p>Página: <a href="index.html">1</a> <a href="page2.html">2</a> <a href="#">3</a></p>
-        <h1>Titulo 1</h1>
+        <h1 id="titulo1">Titulo 1</h1>
 
         <p title="esse é um paragrafo"><a href="#">Lorem</a> ipsum, dolor sit amet consectetur adipisicing elit. Ipsa, esse perferendis voluptatibus sequi distinctio sit facere obcaecati, cupiditate minima tempore quia nemo ea fuga ducimus delectus porro? Commodi, distinctio deserunt. <a href="https://pt.wikipedia.org/wiki/Lorem_ipsum">Lorem</a> ipsum dolor sit amet consectetur adipisicing elit.</p>
 
@@ -26,7 +26,7 @@
             <sub>Texto em baixo</sub>
         </p>
 
-        <img src="lorem-ipsum-logo.jpg" alt="Lorem Ipsum Logo" width="100%" >
+        <img src="_img/lorem-ipsum-logo.jpg" alt="Lorem Ipsum Logo" width="100%" >
 
         <hr> <!--Adiciona uma linha horizontal, utilizada para separar conteúdos-->
 
@@ -49,6 +49,6 @@ ou seja, da maneira que eu escrever no
 código fonte, será a maneira que vai aparecer
 na página web. Sim, meu português é avançado.
 </pre>
-        
+        <a href="#titulo1">Ir para Titulo 1</a>
     </body>
 </html>
