--- a/iNTRODUÇÃO/page2.html
+++ b/iNTRODUÇÃO/page2.html
@@ -15,7 +15,7 @@
     <address>
         Escrito por fulano de tal<br>
         visite a gente em: casa do sao jao<br>
-        Contate-nos: email@email.com<br>
+        Contate-nos: <a href="mailto:someone@example.com" target="_blank">Enviar e-mail</a><br>
     </address>
     <!--Tag <abbr> mostra uma descrição para a abreviação-->
     <p>Sim, isso é <abbr title="Hyper Text Markup Language">HTML</abbr></p> 
@@ -23,6 +23,20 @@
     <bdo dir="ltr">Esse texto foi escrito da esquerda para a direita<Br></bdo>
     <bdo dir="rtl">Esse texto foi escrito da direita para a esquerda<Br></bdo>
     
-        
+    <p>
+        <a href="page2.html">Abre o link na mesma página</a><br>
+        <a href="page2.html" target="_blank">Abre o link em outra janela</a><br>
+    </p>
+
+    <a href="index.html#titulo1">Ir para o Título 1</a>
+
+    <hr>
+
+    <h1>Introdução ao HTML - Imagens</h1>
+
+    <img src="_img/image1.jpg" alt="" width="400px" height="500px">
+    <img src="_img/image2.jpg" alt="" width="400px" height="500px">
+    <img src="_img/image3.jpg" alt="" width="400px" height="500px">
+
 </body>
 </html>
