Introdução ao HTML - Tipos de Inputs

--- a/iNTRODUÇÃO/index.html
+++ b/iNTRODUÇÃO/index.html
@@ -7,7 +7,7 @@
         <title>Estrutura HTML</title> <!-- é o titulo da página HTML -->
     </head>
     <body> <!-- é o elemento onde fica todo o conteúdo visível da página. -->
-        <p>Página: <a href="index.html">1</a> <a href="page2.html">2</a> <a href="#">3</a></p>
+        <p>Página: <a href="index.html">1</a> <a href="page2.html">2</a> <a href="page3.html">3</a></p>
         <h1 id="titulo1">Titulo 1</h1>
 
         <p title="esse é um paragrafo"><a href="#">Lorem</a> ipsum, dolor sit amet consectetur adipisicing elit. Ipsa, esse perferendis voluptatibus sequi distinctio sit facere obcaecati, cupiditate minima tempore quia nemo ea fuga ducimus delectus porro? Commodi, distinctio deserunt. <a href="https://pt.wikipedia.org/wiki/Lorem_ipsum">Lorem</a> ipsum dolor sit amet consectetur adipisicing elit.</p>
