--- a/iNTRODUÇÃO/page2.html
+++ b/iNTRODUÇÃO/page2.html
@@ -20,7 +20,7 @@
 
 </head>
 <body>
-    <p>Página: <a href="index.html">1</a> <a href="page2.html">2</a> <a href="#">3</a></p>
+    <p>Página: <a href="index.html">1</a> <a href="page2.html">2</a> <a href="page3.html">3</a></p>
     <p>Como aristóteles dizia: </p>
     <blockquote cite="https://www.pensador.com/aristoteles_frases/">
         "<i>O sábio nunca diz tudo o que pensa, mas pensa sempre tudo o que diz.</i>"
@@ -105,7 +105,33 @@
         </tr>
     </table>
 
+    <hr>
 
+    <h1>Tipos de Inputs</h1>
+    <form action="">
+        <input type="button"><br>
+        <input type="checkbox"><br>
+        <input type="color"><br>
+        <input type="date"><br>
+        <input type="datetime-local"><br>
+        <input type="email"><br>
+        <input type="file"><br>
+        <input type="hidden"><br>
+        <input type="image"><br>
+        <input type="month"><br>
+        <input type="number"><br>
+        <input type="password"><br>
+        <input type="radio"><br>
+        <input type="range"><br>
+        <input type="reset"><br>
+        <input type="search"><br>
+        <input type="submit"><br>
+        <input type="tel"><br>
+        <input type="text"><br>
+        <input type="time"><br>
+        <input type="url"><br>
+        <input type="week"><br>
+    </form>
 
 
 </body>
